# SetCalculator

./: CMakeLists.txt  README.md
program/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test-calculator.cpp
